--- a/assets/core/card/template/default.html
+++ b/assets/core/card/template/default.html
@@ -1,3 +1,11 @@
 <html>
-<p>{{name}}</p>
+	<table>
+		<tr>
+			<td>{{title}}</td>
+		</tr><tr>
+			<td>{{flavour}}</td>
+		</tr><tr>
+			<td>{{rules}}</td>
+		</tr>
+	</table>
 </html>
