add card template

--- a/res/card/template/default.html
+++ b/res/card/template/default.html
@@ -1,11 +1,42 @@
-<html>
-	<table>
-		<tr>
-			<td>{{title}}</td>
-		</tr><tr>
-			<td>{{flavour}}</td>
-		</tr><tr>
-			<td>{{rules}}</td>
-		</tr>
-	</table>
-</html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>card creator</title>
+  <link rel="stylesheet" href="css/card.css">
+</head>
+
+<body>
+  <div class="card">
+    <div class="tier">
+      <div class="tier-img"></div>
+      <div class="frame-external">
+        <div class="frame-external-img"></div>
+        <div class="frame-internal">
+          <div class="frame-internal-img"></div>
+          <div class="title-box">
+            <div class="title-box-img"></div>
+            <p class="title-box-text">TITLE CARD</p>
+          </div>
+          <div class="illustration">
+            <img class="illustration-img" src="../../../res/art/illustration/Rodent Whisperer.png">
+          </div>
+          <div class="type-box">
+            <img class="type-box-img" src="../../../res/art/type/blue.png">
+            <p class="type-text">CARD TYPE - UPGRADE</p>
+          </div>
+          <div class="rules-box">
+            <img class="rules-box-img" src="../../../res/art/rules/blue.png">
+            <p class="active-text">⚡ ACTIVE</p>
+            <p class="passive-text">✋ PASSIVE</p>
+            <p class="flavour-text">FLAVOUR</p>
+          </div>
+          <div class="attributions-box">
+            <img class="attributions-box-img" src="../../../res/art/attribution/attribution.png">
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+  </html>
