--- a/res/card/template/default.html
+++ b/res/card/template/default.html
@@ -9,33 +9,39 @@
 
 <body>
   <div class="card">
-    <div class="tier">
-      <div class="tier-img"></div>
-      <div class="frame-external">
-        <div class="frame-external-img"></div>
-        <div class="frame-internal">
-          <div class="frame-internal-img"></div>
-          <div class="title-box">
-            <div class="title-box-img"></div>
-            <p class="title-box-text">TITLE CARD</p>
-          </div>
-          <div class="illustration">
-            <img class="illustration-img" src="../../../res/art/illustration/Rodent Whisperer.png">
-          </div>
-          <div class="type-box">
-            <img class="type-box-img" src="../../../res/art/type/blue.png">
-            <p class="type-text">CARD TYPE - UPGRADE</p>
-          </div>
-          <div class="rules-box">
-            <img class="rules-box-img" src="../../../res/art/rules/blue.png">
-            <p class="active-text">⚡ ACTIVE</p>
-            <p class="passive-text">✋ PASSIVE</p>
-            <p class="flavour-text">FLAVOUR</p>
-          </div>
-          <div class="attributions-box">
-            <img class="attributions-box-img" src="../../../res/art/attribution/attribution.png">
-          </div>
+      <div class="tier"></div>
+      <div class="frame"></div>
+      <div class="borders"></div>
+      <div class="title">
+        <div class="title-text">
+          TITLE
         </div>
+      </div>
+      <div class="illustration"></div>
+      <div class="type">
+        <div class="type-text">
+          UPGRADE - TITLE II
+        </div>
+      </div>
+      <div class="rules">
+        <div class="effect-text">
+          ⚡ ACTIVE
+          ✋ PASSIVE
+        </div>
+        <div class="flavour-text">
+          Flavour text
+        </div>
+      </div>
+      <div class="meta">
+        <p class="author">
+          Illus. Elliot Tomlinson
+        </p>
+        <p class="copyright">
+          © 2021 Cardmaster
+        </p>
+        <p class="serial">
+          pre-alpha 000/000
+        </p>
       </div>
     </div>
   </body>
