--- a/res/card/template/default.html
+++ b/res/card/template/default.html
@@ -10,8 +10,8 @@
 <body>
   <div class="card">
       <div class="tier"></div>
+      <div class="border"></div>
       <div class="frame"></div>
-      <div class="borders"></div>
       <div class="title">
         <div class="title-text">
           TITLE
@@ -20,17 +20,19 @@
       <div class="illustration"></div>
       <div class="type">
         <div class="type-text">
-          UPGRADE - TITLE II
+          TITLE II
         </div>
       </div>
       <div class="rules">
-        <div class="effect-text">
+        <p class="active">
           ⚡ ACTIVE
+        </p>
+        <p class="passive">
           ✋ PASSIVE
-        </div>
-        <div class="flavour-text">
+        </p>
+        <em class="flavour">
           Flavour text
-        </div>
+        </em>
       </div>
       <div class="meta">
         <p class="author">
@@ -39,8 +41,8 @@
         <p class="copyright">
           © 2021 Cardmaster
         </p>
-        <p class="serial">
-          pre-alpha 000/000
+        <p class="code">
+          <span class="series">pre-alpha 000/000</span>
         </p>
       </div>
     </div>
