card template update

--- a/res/card/template/css/card.css
+++ b/res/card/template/css/card.css
@@ -126,8 +126,12 @@
   text-align: center;
 }
 
-.serial {
+.code {
   color: #666666;
   width:33.33333%;
   text-align:right;
+}
+
+.serial {
+  color: #999999;
 }
