--- a/res/card/template/default.html
+++ b/res/card/template/default.html
@@ -20,7 +20,7 @@
       <div class="illustration"></div>
       <div class="type">
         <div class="type-text">
-          TITLE II
+          UPGRADE: TITLE II
         </div>
       </div>
       <div class="rules">
@@ -42,7 +42,12 @@
           © 2021 Cardmaster
         </p>
         <p class="code">
-          <span class="series">pre-alpha 000/000</span>
+          <span class="series">
+            test
+          </span>
+          <span class="serial">
+            000/000
+          </span>
         </p>
       </div>
     </div>
