--- a/res/card/template/css/card.css
+++ b/res/card/template/css/card.css
@@ -1,16 +1,20 @@
 @font-face {
   font-family: 'Karmatic Arcade', monospace;
-  src: url(font/ka1.tff) format('ttf'),
+  src: url(font/ka1.ttf) format('ttf'),
 }
 
 @font-face {
   font-family: 'Segoe UI Semibold', normal;
-  src: url(font/seguisb.tff) format('ttf'),
+  src: url(../font/seguisb.tff) format('ttf'),
 }
 
 @font-face {
   font-family: 'EB Garamond', normal;
-  src: url(font/EBGaramond-VariableFont_wght.ttf) format('ttf'),
+  src: url(../font/EBGaramond-VariableFont_wght.ttf) format('ttf'),
+}
+
+.body {
+  background-color: transparent;
 }
 
 .card {
@@ -19,7 +23,7 @@
 }
 
 .tier {
-  background-image: url("../../../../res/art/tier/blue.png");
+  background-image: url("{{tier_image_path}}");
   width: 736px;
   height: 1041px;
   z-index: 0;
@@ -31,7 +35,7 @@
 }
 
 .border {
-  background-image: url("../../../../res/art/border/border.png");
+  background-image: url("{{border_image_path}}");
   z-index: 1;
   position: absolute;
   left: 0px;
@@ -41,7 +45,7 @@
 }
 
 .frame {
-  background-image: url("../../../../res/art/frame/blue.png");
+  background-image: url("{{frame_image_path}}");
   z-index: 2;
   position: absolute;
   left: 40px;
@@ -51,21 +55,31 @@
 }
 
 .title {
-  font-family: 'Karmatic Arcade';
-  font-size: 36pt;
-  z-index: 6;
-  text-align: center;
-  background-image: url("../../../../res/art/title/blue.png");
+  background-image: url("{{title_image_path}}");
   z-index: 2;
   position: absolute;
   left: 74px;
   top: 74px;
   width: 668px;
   height: 76px;
+  text-align: center;
+}
+
+/* https://www.w3schools.com/howto/howto_css_center-vertical.asp */
+.vertical-center {
+  line-height: 1.5;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.title-text {
+  font-family: 'Karmatic Arcade';
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .illustration {
-  background-image: url("../../../../res/art/illustration/Jump.png");
+  background-image: url("{{illustration_image_path}}");
   z-index: 1;
   position: absolute;
   left: 74px;
@@ -77,7 +91,7 @@
 .type {
   font-family: 'Karmatic Arcade';
   font-size: 18pt;
-  background-image: url("../../../../res/art/type/blue.png");
+  background-image: url("{{type_image_path}}");
   z-index: 1;
   position: absolute;
   left: 74px;
@@ -86,10 +100,17 @@
   height: 44px;
 }
 
+.type-text {
+  position: absolute;
+  width: 558px;
+  top: 8px;
+  left: 185px;
+}
+
 .rules {
   font-family: 'Segoe UI Semibold';
-  font-size: 20pt;
-  background-image: url("../../../../res/art/rules/blue.png");
+  font-size: 22pt;
+  background-image: url("{{rules_image_path}}");
   position: absolute;
   left: 74px;
   top: 755px;
@@ -97,8 +118,25 @@
   height: 292px;
 }
 
-.flavour {
+.rules-text {
+  position: relative;
+  left: 20px;
+  top: 30px;
+  width: 628px;
+  height: 242px;
+}
 
+.active {
+  margin-bottom: 10px;
+}
+
+.passive {
+  margin-bottom: 10px;
+}
+
+.flavour {
+  position: absolute;
+  bottom: 0px;
 }
 
 .meta {
@@ -116,19 +154,19 @@
 
 .author {
   color: #666666;
-  width:33.33333%;
+  width: 234px;
   text-align: left;
 }
 
 .copyright {
   color: white;
-  width:33.33333%;
+  width: 234px;
   text-align: center;
 }
 
 .code {
   color: #666666;
-  width:33.33333%;
+  width: 234px;
   text-align:right;
 }
 
