Rename active to cast, passive to hand

--- a/res/card/template/default.html
+++ b/res/card/template/default.html
@@ -50,8 +50,8 @@
       </div>
       <div class="rules">
         <div class="rules-text">
-          <div class="active">
-            <div class="cast glyph"></div> {{active_rules}}
+          <div class="cast">
+            <div class="cast glyph"></div> {{cast_rules}}
           </div>
           <em class="flavour">
             {{flavour}}
