--- a/res/card/template/hand.html
+++ b/res/card/template/hand.html
@@ -50,11 +50,11 @@
       </div>
       <div class="rules">
         <div class="rules-text">
-          <div class="active">
-            <div class="cast glyph"></div> {{active_rules}}
+          <div class="cast">
+            <div class="cast glyph"></div> {{cast_rules}}
           </div>
-          <div class="passive">
-            <div class="hand glyph"></div> {{passive_rules}}
+          <div class="hand">
+            <div class="hand glyph"></div> {{hand_rules}}
           </div>
           <em class="flavour">
             {{flavour}}
