--- a/res/card/template/default.html
+++ b/res/card/template/default.html
@@ -51,7 +51,7 @@
       <div class="rules">
         <div class="rules-text">
           <div class="cast">
-            <div class="cast glyph"></div> {{cast_rules}}
+            <div class="glyph castglyph"></div> {{cast_rules}}
           </div>
           <em class="flavour">
             {{flavour}}
