--- a/res/card/template/hand.html
+++ b/res/card/template/hand.html
@@ -51,10 +51,10 @@
       <div class="rules">
         <div class="rules-text">
           <div class="cast">
-            <div class="cast glyph"></div> {{cast_rules}}
+            <div class="glyph castglyph"></div> {{cast_rules}}
           </div>
           <div class="hand">
-            <div class="hand glyph"></div> {{hand_rules}}
+            <div class="glyph handglyph"></div> {{hand_rules}}
           </div>
           <em class="flavour">
             {{flavour}}
