--- a/res/card/template/default.html
+++ b/res/card/template/default.html
@@ -22,7 +22,7 @@
   {
     textSpan = document.getElementById("title-text")
     textDiv = document.getElementById("title")
-    
+
     textSpan.style.fontSize = "36pt"
 
     while(textSpan.offsetHeight > textDiv.offsetHeight)
@@ -40,7 +40,8 @@
       <div class="border"></div>
       <div class="frame"></div>
       <div class="title" id="title">
-        <span class="title-text vertical-center" id="title-text">{{title}}</div>
+        <span class="title-text-fill vertical-center" id="title-text">{{title}}</span>
+        <span class="title-text vertical-center" id="title-text">{{title}}</span>
       </div>
       <div class="illustration"></div>
       <div class="type">
