change shadow colour to black

--- a/res/card/template/css/card.css
+++ b/res/card/template/css/card.css
@@ -90,7 +90,7 @@
   font-family: 'Karmatic Arcade Filled';
   margin-left: 20px;
   margin-right: 20px;
-  text-shadow: 2px 2px 4px grey;
+  text-shadow: 2px 2px 4px black;
 }
 
 .illustration {
