--- a/res/card/template/css/card.css
+++ b/res/card/template/css/card.css
@@ -1,204 +1,232 @@
+:root {
+  --image-border       : url("{{border_image_path}}");
+  --image-frame        : url("{{frame_image_path}}");
+  --image-tier         : url("{{tier_image_path}}");
+  --image-title        : url("{{title_image_path}}");
+  --image-illus        : url("{{illustration_image_path}}");
+  --image-type         : url("{{type_image_path}}");
+  --image-rules        : url("{{rules_image_path}}");
+  --image-cast         : url("{{cast_glyph_image_path}}");
+  --image-hand         : url("{{hand_glyph_image_path}}");
+  --font-title         : 'Karmatic Arcade Plus';
+  --font-title-fill    : 'Karmatic Arcade Plus Fill';
+  --font-type          : 'Karmatic Arcade Plus';
+  --font-type-fill     : 'Karmatic Arcade Plus Fill';
+  --font-rules         : 'Segoe UI Semibold';
+  --font-flavour       : 'Libre Baskerville';
+  --font-meta          : 'EB Garamond';
+  --font-size-type     : 18.6pt;
+  --font-size-rules    : 22pt;
+  --font-size-flavour  : 18pt;
+  --font-size-meta     : 13pt;
+  --colour-title       : black;
+  --colour-title-fill  : white;
+  --colour-rules       : black;
+  --colour-flavour     : #2e2e2e;
+  --colour-copyright   : #c7c7c7;
+  --colour-illustrator : #666666;
+  --colour-code        : #666666;
+  --colour-set         : #999999;
+}
+
 .body {
-  background-color: transparent;
+  background-color : transparent;
 }
 
 .card {
-  width: 816px;
-  height: 1154px;
+  width  : 816px;
+  height : 1154px;
 }
 
 .tier {
-  background-image: url("{{tier_image_path}}");
-  width: 736px;
-  height: 1041px;
-  z-index: 0;
-  position: absolute;
-  left:40px;
-  top:40px;
-  width: 736px;
-  height: 1041px;
+  z-index          : 0;
+  position         : absolute;
+  top              : 40px;
+  left             : 40px;
+  width            : 736px;
+  width            : 736px;
+  height           : 1041px;
+  height           : 1041px;
+  background-image : var(--image-tier);
 }
 
 .border {
-  background-image: url("{{border_image_path}}");
-  z-index: 1;
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 816px;
-  height: 1154px;
+  z-index          : 1;
+  position         : absolute;
+  top              : 0px;
+  left             : 0px;
+  width            : 816px;
+  height           : 1154px;
+  background-image : var(--image-border);
 }
 
 .frame {
-  background-image: url("{{frame_image_path}}");
-  z-index: 2;
-  position: absolute;
-  left: 40px;
-  top: 40px;
-  width: 736px;
-  height: 1041px;
-}
-
-.title {
-  background-image: url("{{title_image_path}}");
-  z-index: 2;
-  position: absolute;
-  left: 74px;
-  top: 74px;
-  width: 668px;
-  height: 76px;
-  text-align: center;
-}
-
-/* https://www.w3schools.com/howto/howto_css_center-vertical.asp */
-.vertical-center {
-  line-height: 1.5;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.title-text {
-  color: black;
-  font-family: 'Karmatic Arcade Plus';
-  margin-left: 20px;
-  margin-right: 20px;
-  position: relative;
-  font-size: 36pt;
-  top: -72px;
-  left: -20px;
-  width: 668px;
-  text-shadow: 1px 1px 0px black;
-}
-
-.title-text-fill {
-  color: white;
-  font-family: 'Karmatic Arcade Plus Filled';
-  margin-left: 19px;
-  margin-right: 20px;
+  z-index          : 2;
+  position         : absolute;
+  top              : 40px;
+  left             : 40px;
+  width            : 736px;
+  height           : 1041px;
+  background-image : var(--image-frame);
 }
 
 .illustration {
-  background-image: url("{{illustration_image_path}}");
-  z-index: 1;
-  position: absolute;
-  left: 74px;
-  top: 178px;
-  height: 477px;
-  width: 668px;
+  z-index          : 1;
+  position         : absolute;
+  top              : 178px;
+  left             : 74px;
+  width            : 668px;
+  height           : 477px;
+  background-image : var(--image-illus);
+}
+
+/* https://www.w3schools.com/howto/howto_css_center-vertical.asp */
+
+.vertical-center {
+  display        : inline-block;
+  vertical-align : middle;
+  line-height    : 1.5;
+}
+
+.title {
+  z-index          : 2;
+  position         : absolute;
+  top              : 74px;
+  left             : 74px;
+  width            : 668px;
+  height           : 76px;
+  background-image : var(--image-title);
+  text-align       : center;
+}
+
+.title-text::before {
+  content     : attr(text);
+  position    : absolute;
+  color       : var(--colour-title);
+  font-family : var(--font-title);
+}
+
+.title-text::after {
+  content     : attr(text);
+  color       : var(--colour-title-fill);
+  font-family : var(--font-title-fill);
 }
 
 .type {
-  font-size: 18pt;
-  background-image: url("{{type_image_path}}");
-  z-index: 1;
-  position: absolute;
-  left: 74px;
-  top: 683px;
-  width: 668px;
-  height: 44px;
+  z-index          : 4;
+  position         : absolute;
+  top              : 683px;
+  left             : 74px;
+  width            : 668px;
+  height           : 44px;
+  background-image : var(--image-type);
+  font-size        : var(--font-size-type);
 }
 
 .type-text {
-  font-family: 'Karmatic Arcade Plus';
-  position: absolute;
-  width: 558px;
-  top: 8px;
-  left: 185px;
+  position : absolute;
+  top      : 6px;
+  left     : 185px;
+  width    : 558px;
 }
 
-.type-text-fill {
-  font-family: 'Karmatic Arcade Plus Filled';
-  text-shadow: 1px 1px 4px black;
-  position: absolute;
-  width: 558px;
-  top: 8px;
-  left: 165px;
-  color: white;
-  margin-left: 20px;
-  margin-right: 20px;
+.type-text::before {
+  content     : attr(text);
+  position    : absolute;
+  color       : black;
+  filter      : contrast(999%);
+  font-family : var(--font-type);
+}
+
+.type-text::after {
+  content     : attr(text);
+  color       : white;
+  font-family : var(--font-type-fill);
 }
 
 .rules {
-  font-family: 'Segoe UI';
-  font-size: 22pt;
-  background-image: url("{{rules_image_path}}");
-  position: absolute;
-  left: 74px;
-  top: 755px;
-  width: 668px;
-  height: 292px;
+  position         : absolute;
+  top              : 755px;
+  left             : 74px;
+  width            : 668px;
+  height           : 292px;
+  background-image : var(--image-rules);
+  font-family      : var(--font-rules);
+  font-size        : var(--font-size-rules);
 }
 
 .rules-text {
-  position: relative;
-  left: 20px;
-  top: 30px;
-  width: 628px;
-  height: 242px;
+  position : relative;
+  top      : 30px;
+  left     : 20px;
+  width    : 628px;
+  height   : 242px;
+  color    : var(--colour-rules);
 }
 
 .cast {
-  margin-bottom: 10px;
+  margin-bottom : 10px;
 }
 
 .hand {
-  margin-bottom: 10px;
+  margin-bottom : 10px;
 }
 
 .glyph {
-  width: 25px;
-  height: 25px;
-  display: inline-block;
-  background-size: contain;
+  display         : inline-block;
+  width           : 25px;
+  height          : 25px;
+  background-size : contain;
 }
 
 .castglyph {
-  background-image: url("{{cast_glyph_image_path}}")
+  background-image : var(--image-cast);
 }
 
 .handglyph {
-  background-image: url("{{hand_glyph_image_path}}")
+  background-image : var(--image-hand);
 }
 
 .flavour {
-  font-family: 'EB Garamond';
-  font-size: 22pt;
-  width: 100%;
-  position: absolute;
-  bottom: 0px;
+  position    : absolute;
+  bottom      : 0px;
+  width       : 100%;
+  color       : var(--colour-flavour);
+  font-family : var(--font-flavour);
+  font-size   : var(--font-size-flavour);
 }
 
 .meta {
-  font-family: 'EB Garamond';
-  font-size: 13pt;
-  display:flex;
-  flex-flow:row wrap;
-  z-index: 3;
-  position: absolute;
-  left: 55px;
-  top: 1084px;
-  width: 702px;
-  height: 32px;
+  z-index     : 3;
+  display     : flex;
+  position    : absolute;
+  top         : 1084px;
+  left        : 55px;
+  width       : 702px;
+  height      : 32px;
+  font-family : var(--font-meta);
+  font-size   : var(--font-size-meta);
+  flex-flow   : row wrap;
 }
 
-.author {
-  color: #666666;
-  width: 234px;
-  text-align: left;
+.illustrator {
+  width      : 234px;
+  color      : var(--colour-illustrator);
+  text-align : left;
 }
 
 .copyright {
-  color: white;
-  width: 234px;
-  text-align: center;
+  width      : 234px;
+  color      : var(--colour-copyright);
+  text-align : center;
 }
 
 .code {
-  color: #666666;
-  width: 234px;
-  text-align:right;
+  width      : 234px;
+  color      : var(--colour-code);
+  text-align : right;
 }
 
-.serial {
-  color: #999999;
+.set {
+  color : var(--colour-set);
 }
